[package]
name = "actix-helmet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-utils = "3"
actix-web = { version = "4.1", default_features = false }

futures-core = "0.3.21"
futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
log = "0.4"
pin-project-lite = "0.2.9"

[dev-dependencies]
actix-service = "2"
actix-web = { version = "4.1", default_features = false, features = ["macros"] }
